// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderer should render argument 1`] = `
<Group
  separator=" "
>
  <span>
    <Styled(Name)
      name="Foo"
    />
    :
  </span>
  <Styled(Code)>
    Array
  </Styled(Code)>
  <Styled(Markdown)
    inline={true}
    text="— Converts foo to bar"
  />
</Group>
`;

exports[`renderer should render argument without description 1`] = `
<Group
  separator=" "
>
  <span>
    <Styled(Name)
      name="Foo"
    />
    :
  </span>
  <Styled(Code)>
    Array
  </Styled(Code)>
</Group>
`;

exports[`renderer should render argument without type 1`] = `
<Group
  separator=" "
>
  <span>
    <Styled(Name)
      name="Foo"
    />
  </span>
  <Styled(Markdown)
    inline={true}
    text="— Converts foo to bar"
  />
</Group>
`;

exports[`renderer should render return value 1`] = `
<Group
  separator=" "
>
  Returns
  <Styled(Code)>
    Array
  </Styled(Code)>
  <Styled(Markdown)
    inline={true}
    text="— Converts foo to bar"
  />
</Group>
`;
